css/index.scss
@import "layout";

/* Variables index.scss */
$z-index-header: 100;
$z-index-drawer-shadow: 900;
$z-index-drawer: 999;

/* Lists */
.list {
  padding: 0;
  list-style-type: none;

  &--inline {
    display: flex;
    align-items: center;
  }

  &--inline &__item {
    margin: 0 1.4rem;
  }
}

/* Grids */
.grid {
  display: grid;
}

.grid--1x2,
.grid--1x3,
.grid--1x4,
.grid--2x3,
.grid--3x3 {
  grid-template-columns: 100%;
  row-gap: 2rem;
}

.grid--3x3 {
  grid-template-rows: repeat(3, auto);
}

.grid--2x3 {
  grid-template-rows: repeat(2, 1fr);
}

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }

  .grid--1x4 {
    grid-template-columns: repeat(2, 1fr);
  }

  .grid--1x3,
  .grid--2x3,
  .grid--3x3 {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
  }
}

@media screen and (min-width: 1024px) {
  .grid--1x4 {
    grid-template-columns: repeat(4, 1fr);
  }

  .grid--1x3,
  .grid--2x3,
  .grid--3x3 {
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
  }
}

/* Blocks */
.block {
  width: 100%;
  padding: 2rem;

  @media screen and (min-width: 1024px) {
    padding: 2rem 4rem;
  }

  &--primary {
    color: #fff;
    background-color: $color-primary;
  }

  &--primary &__heading {
    color: #fff;
  }

  &--primary &__description,
  &--primary &__subtitle {
    color: rgba(236, 236, 236, 0.8);
  }

  &__heading,
  &__description {
    text-align: center;
  }

  &__heading {
    margin: 4rem auto 1rem;
  }

  &__subtitle {
    font-size: 2rem;
    font-weight: 400;
    color: $color-section-description;
    text-align: center;
  }

  &__hint {
    color: $color-primary;
    font-weight: 300;
    letter-spacing: 1px;
    font-size: 1.6rem;
  }

  &__description {
    color: $color-section-description;
  }
}

/* Logo */
.logo {
  width: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;

  &__image {
    width: 32px;
    height: 32px;
  }

  &__app-name {
    margin-left: 10px;
    font-size: 3rem;
    color: #fff;
    line-height: 1;
    font-weight: 700;
  }
}

/* Header */
.app-header {
  width: 100%;
  position: absolute;
  padding: 1rem 2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: $z-index-header;

  @media screen and (min-width: 768px) {
    padding: 2rem 4rem;
  }
}

/* Navigation */
.navigation {
  width: 240px;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  // background-color: rgba(0, 0, 0, 0.7);
  background-color: $color-nav-drawer-bg;
  transform: translateX(-100%);
  transition: transform 0.3s ease-in;
  z-index: $z-index-drawer;

  @media screen and (min-width: 768px) {
    width: fit-content;
    height: fit-content;
    position: static;
    background-color: transparent;
    transform: none;
    transition: none;
    z-index: initial;
  }

  &__toggler {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #fff;
    font-size: 4rem;
    border: 0;
    outline: 0;
    background-color: transparent;
    cursor: pointer;

    @media screen and (min-width: 768px) {
      display: none;
    }
  }

  &__list {
    display: block;
    padding: 2rem;

    @media screen and (min-width: 768px) {
      display: flex;
      padding: 0;
    }

    > .list__item {
      color: #fff;
      margin: 1rem 0;

      @media screen and (min-width: 768px) {
        margin: 0;
        padding: 1rem 1rem;
      }
    }

    .dropdown__header:hover {
      color: $color-primary;
    }

    a {
      display: inline-block;
      color: #fff;
      padding: 1rem;
      transition: color 0.3s;

      @media (hover: hover) {
        &:hover {
          color: $color-primary;
        }
      }
    }
  }
}

.navigation.open {
  transform: translateX(0);
}

.mobile-body-overly {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);

  &.show {
    display: block;
  }
}

/* Dropdown */
.dropdown {
  position: relative;

  &__header {
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 0;
    outline: 0;
    color: inherit;
    background-color: transparent;
    cursor: pointer;

    .icon {
      margin-left: 10px;
      font-size: 2.4rem;
      transition: transform 0.3s;
    }
  }

  &__list {
    display: none;
    position: absolute;
    top: 100%;

    @media screen and (min-width: 768px) {
      left: -25%;
      padding: 1rem;
      border-radius: 0.6rem;
      background-color: rgba(0, 0, 0, 0.4);
    }
  }

  &.expanded {
    .dropdown__list {
      display: block;
    }

    .dropdown__header .icon {
      transform: rotate(180deg);
    }
  }

  @media screen and (min-width: 768px) {
    &:hover &__list {
      display: block;
    }
  }
}

/* Buttons */
.btn {
  padding: 1rem 2rem;
  font-weight: 600;
  text-align: center;
  border-radius: 6rem;

  &--primary {
    color: #000;
    background-color: #fff;
  }

  &--medium {
    padding: 1.2rem 2.4rem;
    font-size: 1.8rem;
  }

  &--big {
    padding: 1.5rem 3rem;
    font-size: 2.6rem;
  }
}

/* Text */
.text--accent {
  color: $color-primary;
}

/* Hero Block */
.block-hero {
  width: 100%;
  height: 100vh;
  position: relative;

  &__image {
    width: 100%;
    height: 100%;
    position: absolute;
    object-fit: cover;
    object-position: center;
  }

  &__content {
    width: 100%;
    height: 100%;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 2;

    @media screen and (min-width: 768px) {
      padding: 4rem;
    }

    .block__heading,
    .block__subtitle {
      color: #fff;
    }

    .block__heading {
      width: 100%;
      text-align: start;
      margin: 2rem 0;

      @media screen and (min-width: 768px) {
        width: 14ch;
      }
    }

    .btn {
      text-transform: uppercase;
    }
  }
}

/* Coffee Types Block */
.coffee-types-block {
  .list {
    margin-top: 2rem;
  }

  .coffee-item {
    padding: 2rem;
    border-radius: 1rem;
    box-shadow: 0 0 60px 5px #d4d4d4;

    &__header {
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    &__name {
      color: #000;
      font-weight: 600;
      font-size: 2.5rem;
    }

    &__price {
      color: $color-primary;
      font-size: 2.5rem;
      font-weight: 700;
    }

    &__description {
      display: block;
      width: 100%;
      color: $color-section-description;
    }
  }
}

/* Telecast Block */
.telecast-block {
  width: 100%;
  background-color: whitesmoke;

  .grid {
    align-items: center;

    @media screen and (min-width: 1024px) {
      grid-template-columns: 2fr 3fr;
    }
  }

  &__image {
    @media screen and (min-width: 768px) {
      padding: 2rem;
    }

    img {
      display: block;
      width: 100%;
      object-fit: cover;
      border-radius: 1.6rem;
    }
  }

  &__content {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    @media screen and (min-width: 768px) {
      padding: 2rem;
    }

    @media screen and (min-width: 1024px) {
      padding: 4rem;
    }
  }

  .block__heading,
  .block__subtitle,
  .block__description {
    text-align: start;
  }

  .block__heading {
    width: fit-content;
    margin: 0;
    margin-top: 1rem;
  }

  .block__subtitle {
    margin: 0;
    margin: 1rem 0;
    color: #000;
  }

  .block__description {
    margin: 0;
    font-size: 1.8rem;
    line-height: 1.5;
  }
}

/* Coffee Images Block */
.coffee-images-block {
  .grid {
    margin-top: 2rem;
    gap: 1rem;

    @media screen and (min-width: 1024px) {
      padding: 0 10rem;
    }
  }

  &__image {
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
    }

    @media screen and (min-width: 1024px) {
      &:nth-of-type(2) {
        grid-column: 2 / 4;
        grid-row: 1 / 3;
      }

      &:nth-of-type(3) {
        grid-row: 2 / span 2;
      }
    }
  }
}

/* Statistics Block */
.statistics-block {
  .list {
    margin-top: 4rem;
  }

  .list__item {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  &__amount {
    font-size: 5rem;
  }

  &__title {
    margin-top: 5px;
    color: #fff;
    font-size: 1.4rem;
    font-weight: 300;
  }
}

/* Posts Block */
.posts-block {
  .grid {
    margin-top: 4rem;
    row-gap: 4rem;

    @media screen and (min-width: 768px) {
      gap: 0 4rem;
      padding: 2rem 4rem;
    }
  }

  .post {
    display: flex;
    flex-direction: column;

    &__image {
      width: 100%;

      img {
        width: 100%;
        border-radius: 1rem;
      }
    }

    &__title {
      margin-top: 1rem;
    }

    &__description {
      color: #8f8f8f;
      font-size: 1.8rem;
    }

    &__date {
      font-weight: 600;
      color: #000;
      font-size: 1.4rem;
    }
  }
}

/* Footer */
.app-footer {
  width: 100%;
  color: #fff;
  background-color: $color-footer-bg;

  &.grid {
    grid-template-columns: 100%;

    @media screen and (min-width: 992px) {
      grid-template-columns: repeat(3, 1fr);
    }
  }

  .section {
    padding: 4rem 2rem;
  }

  &__heading {
    font-size: 3rem;
    color: inherit;
  }

  &__description {
    color: #e0e0e0;
  }

  .form-control {
    width: fit-content;
    display: flex;
    align-items: stretch;
    background-color: #fff;

    &__input {
      padding: 1rem 1.4rem;
      border: 0;
      outline: 0;
      background-color: transparent;
    }

    &__submit-btn {
      display: flex;
      justify-content: center;
      align-items: center;
      color: #fff;
      font-size: 3rem;
      border: 0;
      outline: 0;
      background-color: $color-primary;

      &:hover {
        cursor: pointer;
        background-color: lighten($color: $color-primary, $amount: 10);
      }
    }
  }

  &__social_media {
    display: flex;
    align-items: center;

    .sm-link {
      margin-right: 2rem;
      font-size: 2.4rem;
      display: flex;
      justify-content: center;
      align-items: center;
      color: #fff;

      &:hover {
        color: $color-primary;
      }
    }
  }

  &__copyright {
    margin-top: 2rem;
    color: rgba(255, 255, 255, 0.6);
  }
}

